fixed profile pic it was still too big. it was getting info from sign up scss

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,7 +79,7 @@ body {
   left: 104px;
 }
 
-img {
+.logo-img {
   width: 100%;
   height: 100%;
 }
