--- a/src/sass/chatSignUp.scss
+++ b/src/sass/chatSignUp.scss
@@ -82,10 +82,10 @@
     left: 104px;
 }
 
-img {
+.logo-img {
     width: 100%;
     height: 100%;
-}
+  }
 
 form {
     display: flex;
